hello-app/overlays/qa/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: kust-test
  labels:
    sky: blue
spec:
  replicas: 2
  template:
    metadata:
      labels:
        podlabel: newvalue
