hello-app/overlays/qa/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  namespace: kust-test
spec:
  host: hello-qa.apps.ocp4.example.com
